# ButterflyVR

rust/butteryfly-rs-module/: Cargo.toml
rust/butteryfly-rs-module/src/: client.rs  lib.rs  messages.rs  net_nodes.rs  serializer.rs  server.rs
scenes/autoload/: world_access.gd
scenes/objects/: interactable.gd  interactable.tscn  interactable_message_handler.gd  interactable_message_handler.gd.uid
scenes/objects/physics cube/: cube.tscn
scenes/player/: avatar_manager.gd  chat_bubble.gd  grabber.gd  remote_grabber.gd
scenes/player/ui/: avatar_list.gd  chat.gd  disconnect.gd
scenes/startup/: loading_server.gd
scenes/world/: avatar_change_handler.gd  avatar_change_handler.gd.uid  chat_box_manager.gd  debug_world.tscn  path_helper.gd  path_helper.gd.uid  player_disconnect_handler.gd  player_disconnect_handler.gd.uid  player_grab_handler.gd  player_grab_handler.gd.uid  player_handler.gd  player_handler.gd.uid  world.gd
