[package]
name = "butteryfly-rs-module"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
build-time = "0.1.3"
godot = { version = "0.3.2", features = ["experimental-threads"] }
netcode-rs = "1.4.0"
opus = "0.3.0"

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
panic = "unwind"
